spade-tests/src/snapshots/spade_tests__parser__lexer_error_unexpected_symbol.snap
---
source: spade-tests/src/parser.rs
assertion_line: 115
---
fn a() {
    let x = ¤;
}

error: Lexer error, unexpected symbol
  ┌─ testinput:2:13
  │
2 │     let x = ¤;
  │             ^


